WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289436
REGRESSION(
291846@main
) [WPE] /webkit/WebKitWebView/save is crashing
https://bugs.webkit.org/show_bug.cgi?id=289436
Summary
REGRESSION(291846@main) [WPE] /webkit/WebKitWebView/save is crashing
Claudio Saavedra
Reported
2025-03-09 13:07:35 PDT
/webkit/WebKitWebView/save: CRASH ASSERTION FAILED: Completion handler should always be called !m_function /app/webkit/WebKitBuild/WPE/Release/WTF/Headers/wtf/CompletionHandler.h(66) : WTF::CompletionHandler<Out(In ...)>::~CompletionHandler() [with Out = void; In = {}] 1 0x7f82736a0a9d WTF::Detail::CallableWrapper<WebKit::WebPageProxy::callAfterNextPresentationUpdate(WTF::CompletionHandler<void ()>&&)::{lambda()#1}, void>::~CallableWrapper() 2 0x7f82736a1520 WTF::Detail::CallableWrapper<IPC::Connection::makeAsyncReplyCompletionHandler<Messages::DrawingArea::DispatchAfterEnsuringDrawing, WebKit::WebPageProxy::callAfterNextPresentationUpdate(WTF::CompletionHandler<void ()>&&)::{lambda(auto:1&, auto:2)#1}::operator()<WebKit::WebProcessProxy, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long> >(WebKit::WebProcessProxy&, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long>) const::{lambda()#1}>(WebKit::WebPageProxy::callAfterNextPresentationUpdate(WTF::CompletionHandler<void ()>&&)::{lambda(auto:1&, auto:2)#1}::operator()<WebKit::WebProcessProxy, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long> >(WebKit::WebProcessProxy&, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long>) const::{lambda()#1}&&, WTF::ThreadLikeAssertion)::{lambda(IPC::Decoder*)#1}, void, IPC::Decoder*>::~CallableWrapper() 3 0x7f82732fefea IPC::Connection::cancelAsyncReplyHandlers() 4 0x7f8273303f18 IPC::Connection::invalidate() 5 0x7f827338ee3c WebKit::AuxiliaryProcessProxy::shutDownProcess() 6 0x7f82734ef173 WebKit::WebProcessProxy::shutDown() 7 0x7f8273430f2b WTF::Detail::CallableWrapper<WebKit::WebPageProxy::close()::{lambda()#1}, void>::~CallableWrapper() 8 0x7f827593e4a1 WTF::RunLoop::performWork() 9 0x7f8275a24109 WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) 10 0x7f8275a257af WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) 11 0x7f827a878d36 g_main_context_dispatch 12 0x7f827a8d62b8 g_main_context_iterate.isra.0 13 0x7f827a8783ff g_main_loop_run 14 0x56074836fce0 testWebViewSave(SaveWebViewTest*, void const*) 15 0x7f827a8a448e g_test_run_suite_internal 16 0x7f827a8a43ab g_test_run_suite_internal 17 0x7f827a8a43ab g_test_run_suite_internal 18 0x7f827a8a49ea g_test_run_suite 19 0x7f827a8a4a80 g_test_run 20 0x56074837a984 main 21 0x7f826835208a __libc_start_call_main 22 0x7f826835214b __libc_start_main 23 0x56074836ddd5 _start
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2025-03-09 13:30:18 PDT
Regression from
https://github.com/WebKit/WebKit/pull/41240
Adrian Perez
Comment 2
2025-03-10 01:07:58 PDT
It looks like this could be the same as
bug #289282
Adrian Perez
Comment 3
2025-03-10 01:08:36 PDT
(In reply to Adrian Perez from
comment #2
)
> It looks like this could be the same as
bug #289282
...which means it may be potentially fixed by
https://github.com/WebKit/WebKit/pull/42048
Adrian Perez
Comment 4
2025-03-10 01:08:46 PDT
(In reply to Adrian Perez from
comment #2
)
> It looks like this could be the same as
bug #289282
...which means it may be potentially fixed by
https://github.com/WebKit/WebKit/pull/42048
Claudio Saavedra
Comment 5
2025-03-10 02:41:28 PDT
No, it's still crashing even after that landed.
Claudio Saavedra
Comment 6
2026-03-12 00:07:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60433
EWS
Comment 7
2026-03-12 02:19:38 PDT
Committed
309127@main
(f52e977c469e): <
https://commits.webkit.org/309127@main
> Reviewed commits have been landed. Closing PR #60433 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug