Cherry-pick 309127@main (f52e977c469e). https://bugs.webkit.org/show_bug.cgi?id=289436

REGRESSION(291846@main) [WPE] /webkit/WebKitWebView/save is crashing
    https://bugs.webkit.org/show_bug.cgi?id=289436

    Reviewed by Fujii Hironori.

    WebPageProxy::callAfterNextPresentationUpdate() was not calling the
    completion handler in the callback agreggator if there was no page
    client. Calling it in that case seems to fix this crash.

    Test: Covered by existing tests.

    * Source/WebKit/UIProcess/wpe/WebPageProxyWPE.cpp:
    (WebKit::WebPageProxy::callAfterNextPresentationUpdate):
    * Tools/TestWebKitAPI/glib/TestExpectations.json:

    Canonical link: https://commits.webkit.org/309127@main

Canonical link: https://commits.webkit.org/298234.488@webkitglib/2.50